--- a/kaggle/Elucidata/Data Processing.ipynb
+++ b/kaggle/Elucidata/Data Processing.ipynb
@@ -769,7 +769,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -783,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
