--- a/kaggle/Elucidata/ML_eff_b0_3.ipynb
+++ b/kaggle/Elucidata/ML_eff_b0_3.ipynb
@@ -5,22 +5,7 @@
    "execution_count": 1,
    "id": "49ca6e1c-6c6c-40b2-afa8-a36faf0cf557",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-02 02:18:59.773229: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1743560339.893651   12138 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1743560339.926766   12138 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1743560340.173836   12138 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1743560340.173908   12138 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1743560340.173916   12138 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1743560340.173923   12138 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
@@ -51,15 +36,7 @@
    "execution_count": 2,
    "id": "4b9d49ae-5b81-440d-9553-2b3c157d9b95",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0000 00:00:1743560344.750351   12138 gpu_device.cc:2019] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4784 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2060, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_data(filename):\n",
     "    \"\"\"\n",
@@ -182,7 +159,16 @@
    "execution_count": 4,
    "id": "c22d774a-5ca2-4a50-bb36-c626fbbf4424",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb0_notop.h5\n",
+      "\u001b[1m16705208/16705208\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "input_shape = (img_width, img_height, 3)\n",
     "enet = tf.keras.applications.EfficientNetB0(\n",
@@ -504,10 +490,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7c78e79c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 165ms/step - cosine_similarity: -0.0657 - loss: 0.0657\n",
+      "Epoch 2/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 75ms/step - cosine_similarity: 0.1597 - loss: -0.1597\n",
+      "Epoch 3/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 84ms/step - cosine_similarity: 0.3310 - loss: -0.3310\n",
+      "Epoch 4/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 76ms/step - cosine_similarity: 0.4517 - loss: -0.4517\n",
+      "Epoch 5/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 76ms/step - cosine_similarity: 0.5387 - loss: -0.5387\n",
+      "Epoch 6/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 75ms/step - cosine_similarity: 0.6025 - loss: -0.6025\n",
+      "Epoch 7/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 77ms/step - cosine_similarity: 0.6504 - loss: -0.6504\n",
+      "Epoch 8/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 76ms/step - cosine_similarity: 0.6870 - loss: -0.6870\n",
+      "Epoch 9/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 86ms/step - cosine_similarity: 0.7123 - loss: -0.7123\n",
+      "Epoch 10/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 76ms/step - cosine_similarity: 0.7327 - loss: -0.7327\n",
+      "Epoch 11/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 75ms/step - cosine_similarity: 0.7468 - loss: -0.7468\n",
+      "Epoch 12/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 75ms/step - cosine_similarity: 0.7602 - loss: -0.7602\n",
+      "Epoch 13/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 85ms/step - cosine_similarity: 0.7700 - loss: -0.7700\n",
+      "Epoch 14/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 75ms/step - cosine_similarity: 0.7767 - loss: -0.7767\n",
+      "Epoch 15/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 75ms/step - cosine_similarity: 0.7820 - loss: -0.7820\n",
+      "Epoch 16/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 74ms/step - cosine_similarity: 0.7872 - loss: -0.7872\n",
+      "Epoch 17/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 83ms/step - cosine_similarity: 0.7898 - loss: -0.7898\n",
+      "Epoch 18/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 74ms/step - cosine_similarity: 0.7929 - loss: -0.7929\n",
+      "Epoch 19/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 74ms/step - cosine_similarity: 0.7947 - loss: -0.7947\n",
+      "Epoch 20/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 75ms/step - cosine_similarity: 0.7977 - loss: -0.7977\n",
+      "Epoch 21/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 84ms/step - cosine_similarity: 0.7989 - loss: -0.7989\n",
+      "Epoch 22/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 74ms/step - cosine_similarity: 0.8012 - loss: -0.8012\n",
+      "Epoch 23/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 75ms/step - cosine_similarity: 0.8037 - loss: -0.8037\n",
+      "Epoch 24/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 84ms/step - cosine_similarity: 0.8049 - loss: -0.8049\n",
+      "Epoch 25/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 74ms/step - cosine_similarity: 0.8068 - loss: -0.8068\n",
+      "Epoch 26/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 74ms/step - cosine_similarity: 0.8089 - loss: -0.8089\n",
+      "Epoch 27/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 74ms/step - cosine_similarity: 0.8105 - loss: -0.8105\n",
+      "Epoch 28/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 84ms/step - cosine_similarity: 0.8123 - loss: -0.8123\n",
+      "Epoch 29/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 75ms/step - cosine_similarity: 0.8141 - loss: -0.8141\n",
+      "Epoch 30/30\n",
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 75ms/step - cosine_similarity: 0.8156 - loss: -0.8156\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 32\n",
     "ds_train = create_tf_ds(\n",
@@ -554,17 +607,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "8872b7f4-5a81-4cbe-bf0e-860c1fecae0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/eff_b0.pkl']"
+       "['model/eff_b0_3.joblib']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,17 +628,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "324394a4-4a9d-4ac1-a7ab-e923c2c3b5b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['model/target_proc.joblib']"
+       "['model/target_proc_3.joblib']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1056,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1017,7 +1070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
