--- a/kaggle/Elucidata/I_eff_b0.ipynb
+++ b/kaggle/Elucidata/I_eff_b0.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9a4f138a-8f21-4ba1-ae28-877e49e7f0b5",
    "metadata": {},
    "outputs": [],
@@ -139,26 +139,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "c4ed2523-c71c-4039-b145-9fd90e7e9531",
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = joblib.load('model/eff_b0.joblib')"
+    "input_shape = (img_width, img_height, 3)\n",
+    "enet = tf.keras.applications.EfficientNetB0(\n",
+    "    include_top = False, \n",
+    "    weights = 'imagenet',\n",
+    "    input_shape = input_shape,\n",
+    "    pooling = 'avg'\n",
+    ")\n",
+    "inputs = tf.keras.Input(shape = input_shape)\n",
+    "x = enet(inputs, training = False)\n",
+    "x = tf.keras.layers.Dropout(0.2)(x)\n",
+    "d1 = tf.keras.layers.Dense(64, activation = 'relu', kernel_initializer = 'HeUniform')\n",
+    "x = d1(x)\n",
+    "d2 = tf.keras.layers.Dense(len(targets))\n",
+    "outputs = d2(x)\n",
+    "m = tf.keras.models.Model(inputs, outputs)\n",
+    "m.set_weights(\n",
+    "    joblib.load('model/eff_b0.joblib')\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2acd0feb",
+   "execution_count": 6,
+   "id": "dbcc9c15",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 58ms/step\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>C1</th>\n",
+       "      <th>C2</th>\n",
+       "      <th>C3</th>\n",
+       "      <th>C4</th>\n",
+       "      <th>C5</th>\n",
+       "      <th>C6</th>\n",
+       "      <th>C7</th>\n",
+       "      <th>C8</th>\n",
+       "      <th>C9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>C26</th>\n",
+       "      <th>C27</th>\n",
+       "      <th>C28</th>\n",
+       "      <th>C29</th>\n",
+       "      <th>C30</th>\n",
+       "      <th>C31</th>\n",
+       "      <th>C32</th>\n",
+       "      <th>C33</th>\n",
+       "      <th>C34</th>\n",
+       "      <th>C35</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.071398</td>\n",
+       "      <td>0.040117</td>\n",
+       "      <td>0.141701</td>\n",
+       "      <td>0.009031</td>\n",
+       "      <td>0.211813</td>\n",
+       "      <td>0.008151</td>\n",
+       "      <td>0.012995</td>\n",
+       "      <td>0.017227</td>\n",
+       "      <td>0.009814</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000325</td>\n",
+       "      <td>0.053672</td>\n",
+       "      <td>0.000292</td>\n",
+       "      <td>0.001256</td>\n",
+       "      <td>0.000092</td>\n",
+       "      <td>0.033042</td>\n",
+       "      <td>0.046456</td>\n",
+       "      <td>0.000492</td>\n",
+       "      <td>0.001819</td>\n",
+       "      <td>0.002361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.071694</td>\n",
+       "      <td>0.083808</td>\n",
+       "      <td>0.022753</td>\n",
+       "      <td>0.265512</td>\n",
+       "      <td>0.004498</td>\n",
+       "      <td>0.000082</td>\n",
+       "      <td>0.002911</td>\n",
+       "      <td>0.000345</td>\n",
+       "      <td>0.001057</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000332</td>\n",
+       "      <td>0.000675</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>0.000754</td>\n",
+       "      <td>0.003447</td>\n",
+       "      <td>0.013645</td>\n",
+       "      <td>0.014227</td>\n",
+       "      <td>0.000465</td>\n",
+       "      <td>0.011269</td>\n",
+       "      <td>0.010712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.156861</td>\n",
+       "      <td>0.135503</td>\n",
+       "      <td>0.198265</td>\n",
+       "      <td>0.088885</td>\n",
+       "      <td>0.032153</td>\n",
+       "      <td>0.001684</td>\n",
+       "      <td>0.003337</td>\n",
+       "      <td>0.008274</td>\n",
+       "      <td>0.007158</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000055</td>\n",
+       "      <td>0.126527</td>\n",
+       "      <td>0.000151</td>\n",
+       "      <td>0.003085</td>\n",
+       "      <td>0.000043</td>\n",
+       "      <td>0.019377</td>\n",
+       "      <td>0.028650</td>\n",
+       "      <td>0.000488</td>\n",
+       "      <td>0.001355</td>\n",
+       "      <td>0.020957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.530362</td>\n",
+       "      <td>0.097162</td>\n",
+       "      <td>0.223312</td>\n",
+       "      <td>0.006383</td>\n",
+       "      <td>0.060004</td>\n",
+       "      <td>0.001570</td>\n",
+       "      <td>0.004476</td>\n",
+       "      <td>0.000733</td>\n",
+       "      <td>0.006946</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.001397</td>\n",
+       "      <td>0.004533</td>\n",
+       "      <td>0.000039</td>\n",
+       "      <td>0.000536</td>\n",
+       "      <td>0.000220</td>\n",
+       "      <td>0.023477</td>\n",
+       "      <td>0.066533</td>\n",
+       "      <td>0.000866</td>\n",
+       "      <td>0.001893</td>\n",
+       "      <td>0.003250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.021545</td>\n",
+       "      <td>0.024370</td>\n",
+       "      <td>0.297151</td>\n",
+       "      <td>0.009130</td>\n",
+       "      <td>0.058395</td>\n",
+       "      <td>0.000437</td>\n",
+       "      <td>0.016580</td>\n",
+       "      <td>0.009962</td>\n",
+       "      <td>0.002759</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.003819</td>\n",
+       "      <td>0.000679</td>\n",
+       "      <td>0.000030</td>\n",
+       "      <td>0.000256</td>\n",
+       "      <td>0.000067</td>\n",
+       "      <td>0.038069</td>\n",
+       "      <td>0.010893</td>\n",
+       "      <td>0.001804</td>\n",
+       "      <td>0.000770</td>\n",
+       "      <td>0.004104</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID        C1        C2        C3        C4        C5        C6        C7  \\\n",
+       "0   0  0.071398  0.040117  0.141701  0.009031  0.211813  0.008151  0.012995   \n",
+       "1   1  0.071694  0.083808  0.022753  0.265512  0.004498  0.000082  0.002911   \n",
+       "2   2  0.156861  0.135503  0.198265  0.088885  0.032153  0.001684  0.003337   \n",
+       "3   3  0.530362  0.097162  0.223312  0.006383  0.060004  0.001570  0.004476   \n",
+       "4   4  0.021545  0.024370  0.297151  0.009130  0.058395  0.000437  0.016580   \n",
+       "\n",
+       "         C8        C9  ...       C26       C27       C28       C29       C30  \\\n",
+       "0  0.017227  0.009814  ...  0.000325  0.053672  0.000292  0.001256  0.000092   \n",
+       "1  0.000345  0.001057  ...  0.000332  0.000675  0.000006  0.000754  0.003447   \n",
+       "2  0.008274  0.007158  ...  0.000055  0.126527  0.000151  0.003085  0.000043   \n",
+       "3  0.000733  0.006946  ...  0.001397  0.004533  0.000039  0.000536  0.000220   \n",
+       "4  0.009962  0.002759  ...  0.003819  0.000679  0.000030  0.000256  0.000067   \n",
+       "\n",
+       "        C31       C32       C33       C34       C35  \n",
+       "0  0.033042  0.046456  0.000492  0.001819  0.002361  \n",
+       "1  0.013645  0.014227  0.000465  0.011269  0.010712  \n",
+       "2  0.019377  0.028650  0.000488  0.001355  0.020957  \n",
+       "3  0.023477  0.066533  0.000866  0.001893  0.003250  \n",
+       "4  0.038069  0.010893  0.001804  0.000770  0.004104  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -167,7 +376,8 @@
     "    target_proc.inverse_transform(\n",
     "        m.predict(ds_train)\n",
     "    ), columns = targets\n",
-    ").reset_index().rename(columns = {'index': 'ID'})"
+    ").reset_index().rename(columns = {'index': 'ID'})\n",
+    "df_train_prd.head()"
    ]
   },
   {
