--- a/kaggle/Elucidata/I_eff_b0_3.ipynb
+++ b/kaggle/Elucidata/I_eff_b0_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ea46bafd-9f0f-4de7-9a95-60934db5b11d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8ae21a3a-22bc-4b8f-8ba8-9ea4ecc441f9",
    "metadata": {},
    "outputs": [],
@@ -120,12 +120,12 @@
     "images, df_spots, images_test, df_spots_test = load_data(\"data/elucidata_ai_challenge_data.h5\")\n",
     "targets = [i for i in df_spots.columns if i.startswith('C')]\n",
     "\n",
-    "target_proc = joblib.load('model/target_proc_2.joblib')"
+    "target_proc = joblib.load('model/target_proc_3.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9a4f138a-8f21-4ba1-ae28-877e49e7f0b5",
    "metadata": {},
    "outputs": [],
@@ -139,235 +139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "c4ed2523-c71c-4039-b145-9fd90e7e9531",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_shape = (img_width, img_height, 3)\n",
-    "enet = tf.keras.applications.EfficientNetB0(\n",
-    "    include_top = False, \n",
-    "    weights = 'imagenet',\n",
-    "    input_shape = input_shape,\n",
-    "    pooling = 'avg'\n",
-    ")\n",
-    "inputs = tf.keras.Input(shape = input_shape)\n",
-    "x = enet(inputs, training = False)\n",
-    "x = tf.keras.layers.Dropout(0.2)(x)\n",
-    "d1 = tf.keras.layers.Dense(64, activation = 'relu', kernel_initializer = 'HeUniform')\n",
-    "x = d1(x)\n",
-    "d2 = tf.keras.layers.Dense(len(targets))\n",
-    "outputs = d2(x)\n",
-    "m = tf.keras.models.Model(inputs, outputs)\n",
-    "m.set_weights(\n",
-    "    joblib.load('model/eff_b0_2.joblib')\n",
-    ")"
+    "m = joblib.load('model/eff_b0_3.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "60ef4f25",
+   "execution_count": 7,
+   "id": "2acd0feb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>C1</th>\n",
-       "      <th>C2</th>\n",
-       "      <th>C3</th>\n",
-       "      <th>C4</th>\n",
-       "      <th>C5</th>\n",
-       "      <th>C6</th>\n",
-       "      <th>C7</th>\n",
-       "      <th>C8</th>\n",
-       "      <th>C9</th>\n",
-       "      <th>C10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>C26</th>\n",
-       "      <th>C27</th>\n",
-       "      <th>C28</th>\n",
-       "      <th>C29</th>\n",
-       "      <th>C30</th>\n",
-       "      <th>C31</th>\n",
-       "      <th>C32</th>\n",
-       "      <th>C33</th>\n",
-       "      <th>C34</th>\n",
-       "      <th>C35</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.179855</td>\n",
-       "      <td>0.039665</td>\n",
-       "      <td>0.049763</td>\n",
-       "      <td>0.010779</td>\n",
-       "      <td>0.108103</td>\n",
-       "      <td>0.029163</td>\n",
-       "      <td>0.009606</td>\n",
-       "      <td>0.000791</td>\n",
-       "      <td>0.011422</td>\n",
-       "      <td>0.001603</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000885</td>\n",
-       "      <td>0.021704</td>\n",
-       "      <td>0.001019</td>\n",
-       "      <td>0.002637</td>\n",
-       "      <td>0.000167</td>\n",
-       "      <td>0.056893</td>\n",
-       "      <td>0.036058</td>\n",
-       "      <td>0.001352</td>\n",
-       "      <td>0.002032</td>\n",
-       "      <td>0.015685</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.395834</td>\n",
-       "      <td>0.054984</td>\n",
-       "      <td>0.185250</td>\n",
-       "      <td>0.071610</td>\n",
-       "      <td>0.173259</td>\n",
-       "      <td>0.000582</td>\n",
-       "      <td>0.026060</td>\n",
-       "      <td>0.000941</td>\n",
-       "      <td>0.003216</td>\n",
-       "      <td>0.000520</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001829</td>\n",
-       "      <td>0.000769</td>\n",
-       "      <td>0.000399</td>\n",
-       "      <td>0.001745</td>\n",
-       "      <td>0.000087</td>\n",
-       "      <td>0.044293</td>\n",
-       "      <td>0.074105</td>\n",
-       "      <td>0.001100</td>\n",
-       "      <td>0.005683</td>\n",
-       "      <td>0.023824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.057249</td>\n",
-       "      <td>0.080794</td>\n",
-       "      <td>0.071122</td>\n",
-       "      <td>0.003046</td>\n",
-       "      <td>0.311723</td>\n",
-       "      <td>0.026178</td>\n",
-       "      <td>0.012079</td>\n",
-       "      <td>0.000628</td>\n",
-       "      <td>0.005905</td>\n",
-       "      <td>0.001516</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000150</td>\n",
-       "      <td>0.041883</td>\n",
-       "      <td>0.001412</td>\n",
-       "      <td>0.005775</td>\n",
-       "      <td>0.000012</td>\n",
-       "      <td>0.037011</td>\n",
-       "      <td>0.028254</td>\n",
-       "      <td>0.002598</td>\n",
-       "      <td>0.002969</td>\n",
-       "      <td>0.019252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.078343</td>\n",
-       "      <td>0.053912</td>\n",
-       "      <td>0.121384</td>\n",
-       "      <td>0.004535</td>\n",
-       "      <td>0.180349</td>\n",
-       "      <td>0.009951</td>\n",
-       "      <td>0.016997</td>\n",
-       "      <td>0.001404</td>\n",
-       "      <td>0.005081</td>\n",
-       "      <td>0.002088</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000553</td>\n",
-       "      <td>0.001432</td>\n",
-       "      <td>0.001161</td>\n",
-       "      <td>0.004321</td>\n",
-       "      <td>0.000090</td>\n",
-       "      <td>0.055418</td>\n",
-       "      <td>0.043318</td>\n",
-       "      <td>0.001753</td>\n",
-       "      <td>0.001141</td>\n",
-       "      <td>0.027666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.105988</td>\n",
-       "      <td>0.048448</td>\n",
-       "      <td>0.047817</td>\n",
-       "      <td>0.003837</td>\n",
-       "      <td>0.221861</td>\n",
-       "      <td>0.003856</td>\n",
-       "      <td>0.014149</td>\n",
-       "      <td>0.000885</td>\n",
-       "      <td>0.003662</td>\n",
-       "      <td>0.000913</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000275</td>\n",
-       "      <td>0.003022</td>\n",
-       "      <td>0.000308</td>\n",
-       "      <td>0.002542</td>\n",
-       "      <td>0.000086</td>\n",
-       "      <td>0.037874</td>\n",
-       "      <td>0.023416</td>\n",
-       "      <td>0.001035</td>\n",
-       "      <td>0.000929</td>\n",
-       "      <td>0.034629</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         C1        C2        C3        C4        C5        C6        C7  \\\n",
-       "0  0.179855  0.039665  0.049763  0.010779  0.108103  0.029163  0.009606   \n",
-       "1  0.395834  0.054984  0.185250  0.071610  0.173259  0.000582  0.026060   \n",
-       "2  0.057249  0.080794  0.071122  0.003046  0.311723  0.026178  0.012079   \n",
-       "3  0.078343  0.053912  0.121384  0.004535  0.180349  0.009951  0.016997   \n",
-       "4  0.105988  0.048448  0.047817  0.003837  0.221861  0.003856  0.014149   \n",
-       "\n",
-       "         C8        C9       C10  ...       C26       C27       C28       C29  \\\n",
-       "0  0.000791  0.011422  0.001603  ...  0.000885  0.021704  0.001019  0.002637   \n",
-       "1  0.000941  0.003216  0.000520  ...  0.001829  0.000769  0.000399  0.001745   \n",
-       "2  0.000628  0.005905  0.001516  ...  0.000150  0.041883  0.001412  0.005775   \n",
-       "3  0.001404  0.005081  0.002088  ...  0.000553  0.001432  0.001161  0.004321   \n",
-       "4  0.000885  0.003662  0.000913  ...  0.000275  0.003022  0.000308  0.002542   \n",
-       "\n",
-       "        C30       C31       C32       C33       C34       C35  \n",
-       "0  0.000167  0.056893  0.036058  0.001352  0.002032  0.015685  \n",
-       "1  0.000087  0.044293  0.074105  0.001100  0.005683  0.023824  \n",
-       "2  0.000012  0.037011  0.028254  0.002598  0.002969  0.019252  \n",
-       "3  0.000090  0.055418  0.043318  0.001753  0.001141  0.027666  \n",
-       "4  0.000086  0.037874  0.023416  0.001035  0.000929  0.034629  \n",
-       "\n",
-       "[5 rows x 35 columns]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 58ms/step\n"
+     ]
     }
    ],
    "source": [
@@ -375,32 +166,50 @@
     "df_train_prd = pd.DataFrame(\n",
     "    target_proc.inverse_transform(\n",
     "        m.predict(ds_train)\n",
-    "    ), columns = targets\n",
-    ")\n",
-    "df_train_prd.head()"
+    "    ), columns = targets, index = df_spots.index\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "e69a1edc",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m261/261\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 31ms/step\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.6532081703204697"
+       "array([[ 0.10017519,  0.08031461,  0.0177186 , ...,  0.22035986,\n",
+       "         0.17047517,  0.25091213],\n",
+       "       [ 0.4424919 ,  0.5165347 ,  0.3037264 , ..., -0.10271922,\n",
+       "         0.40597835,  0.46276098],\n",
+       "       [ 0.19498211,  0.064067  ,  0.07427815, ...,  0.13131942,\n",
+       "         0.20135194,  0.3699511 ],\n",
+       "       ...,\n",
+       "       [ 0.01174716, -0.00730362,  0.01096379, ...,  0.12569872,\n",
+       "         0.12128073,  0.26520005],\n",
+       "       [ 0.06826916,  0.29323816,  0.05722174, ...,  0.12854774,\n",
+       "         0.28707695,  0.49807405],\n",
+       "       [ 0.16138561,  0.15214978, -0.08584818, ...,  0.25624585,\n",
+       "         0.09795114,  0.32594597]], dtype=float32)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from scipy.stats import spearmanr\n",
-    "df_spots[targets].reset_index(drop=True).apply(\n",
-    "    lambda x: spearmanr(x, df_train_prd.loc[x.name, targets])[0], axis = 1\n",
+    "df_train_prd[targets].apply(\n",
+    "    lambda x: spearmanr(x.name, df_train.loc[x.name, targets], axis = 1\n",
     ").mean()"
    ]
   },
