--- a/kaggle/Elucidata/kaggle-starter-notebook.ipynb
+++ b/kaggle/Elucidata/kaggle-starter-notebook.ipynb
@@ -1129,7 +1129,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1143,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   },
   "papermill": {
    "default_parameters": {},
